--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,5 +1,5 @@
 <ng-template [ngIf]="product">
-  <div *ngIf="product.amount" class="card">
+  <div class="card">
     <img src="{{product.image ? product.image : 'https://img.freepik.com/free-icon/photo_318-784022.jpg'}}" alt="{{product.name ? product.name : 'No name'}}">
     <div class="card-info">
       <h2>{{product.name ? product.name : 'No name'}}</h2>
