--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,3 +1,3 @@
 <ng-template ngFor let-product [ngForOf]="products" let-i="index">
-  <app-product [product]="product"/>
+  <app-product *ngIf="product.amount" [product]="product"/>
 </ng-template>
